# FUGU

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: evolve_router.py  evolve_router_torch.py
sepcmaes/: __init__.py  optimizer.py  router.py  torch_backend.py
tests/: test_robustness.py  test_router.py  test_sepcmaes.py  test_torch.py  test_torch_robustness.py
